# rutin-tizen

./: .gitignore  Cargo.toml  README.md
src/: app.rs  lib.rs  rutin.rs
src/efl/: evas.rs  mod.rs
src/efl/elm/: conformant.rs  label.rs  mod.rs  prelude.rs  win.rs
src/efl/ext/: events.rs
src/system/: dlog.rs
